# HeavyBall

./: README.md  pyproject.toml
benchmarks/: bench_optimizer_step.py  bench_singular_values.py
docs/: benchmark.md  heavyball2.md  heavyball3.md
examples/: autoencoder.py  branched_optimizer.py  ddp_training.py  ecc_bf16.py  fsdp_training.py
heavyball/: __init__.py  chainable.py  helpers.py  utils.py
scripts/: migrate_optimizer_state.py
test/: test_ademamix.py  test_chainable_cpu.py  test_compile_step.py  test_cpu_features.py  test_distributed.py  test_ecc.py  test_foreach.py  test_helpers_cpu.py  test_memory_leak.py  test_merge.py  test_migrate_cli.py  test_optimizer_cpu_smoke.py  test_param_ecc_compile.py  test_stochastic_utils_cpu.py  test_toy_training.py  test_utils_cpu.py  test_utils_property.py  utils.py
