[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heavyball"
description = "Compile-first PyTorch optimizer library - AdamW, Muon, SOAP/Shampoo, PSGD, Schedule-Free, and 30+ more with torch.compile fusion and composable features"
version = "3.0.0"
authors = [{ name = "HeavyBall Authors", email = "github.heavyball@nestler.sh" }]
classifiers = ["Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["opt-einsum>=3.4.0",
    "torch>=2.2,<3.0",
    "numpy>=2.3.4",
]
keywords = [
    "pytorch",
    "torch",
    "optimizer",
    "adam",
    "adamw",
    "sgd",
    "deep-learning",
    "machine-learning",
    "torch-compile",
    "triton",
    "second-order",
    "mixed-precision",
    "memory-efficient",
    "soap",
    "muon",
    "psgd",
    "adopt",
    "shampoo",
    "schedule-free",
    "laprop",
    "ademamix",
    "nadam",
    "rmsprop",
    "sam",
    "preconditioning",
    "kronecker",
    "mars",
    "llm-training",
    "distributed",
    "fsdp",
    "ddp",
]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "hypothesis", "ruff", "matplotlib", "seaborn", "pandas", "typer", "optuna", "optunahub", "gpytorch", "scikit-learn", "lightbench"]

[project.urls]
Homepage = "https://github.com/HomebrewML/HeavyBall"
source = "https://github.com/HomebrewML/HeavyBall"
tracker = "https://github.com/HomebrewML/HeavyBall/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "W"]
ignore = ["E741"]
preview = false

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"

[tool.ruff.format]
preview = false

[tool.setuptools.packages.find]
include = ["heavyball*"]
